--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #505320;
+      background-color: #bada55;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
@@ -50,9 +50,13 @@
     </div>
 
     <h2>Authors</h2>
-<p>Chris Heilmann (@codepo8)<br/><br/>      </p>
+<p>Chris Heilmann (@codepo8)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Chris Heilmann (@codepo8)<br/><br/>      </p>
+<p>Chris Heilmann (@codepo8)
+<br/>
+<br/>      </p>
 
 
     <h2>Download</h2>
