Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
     <div class="description">
       Creating CSS3 animations with JavaScript
     </div>
-
+<a href="cssanimation.html">CSS animation</a>
     <h2>Authors</h2>
-<p>Chris Heilmann (@codepo8)<br/><br/>      </p>
+<p>Chris Heilmann (@codepo8)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Chris Heilmann (@codepo8)<br/><br/>      </p>
+<p>Chris Heilmann (@codepo8)
+<br/>
+<br/>      </p>
 
 
     <h2>Download</h2>
